--- a/Table 2.Rmd
+++ b/Table 2.Rmd
@@ -13,7 +13,12 @@ header-includes: \usepackage[labelformat=empty]{caption}
 
 
 ```{r seltable2, echo=FALSE}
-respdat = fullrespdat[which(fullrespdat$Year==1982):which(fullrespdat$Year==2015),]
+#dat.spawners defined in setup-covariates.Rmd
+dat=dat.nonspawners
+Yr1 = min(dat$Year)
+Yr2 = max(dat$Year)
+
+respdat = fullrespdat[which(fullrespdat$Year==Yr1):which(fullrespdat$Year==Yr2),]
 
 #set up table
 seltable = data.frame(
@@ -50,7 +55,7 @@ tmp1 = data.frame(
   p.value="\\kern 1em", 
   AIC="", stringsAsFactors=FALSE)
 tmp2 = data.frame(
-  Model="AR-1 Model", 
+  Model="Linearity and time-dependency test", 
   Residual.df="", 
   MASE="",
   Adj.R2="", F="", p.value="", AIC="", stringsAsFactors=FALSE)
@@ -69,7 +74,7 @@ a=anova(m1,m2,m3,m4, test="F")
 i=1; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(N_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon_t$", 
+  Model="1. $ln(N_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=2), 
@@ -81,7 +86,7 @@ seltable=rbind(seltable, tmp1)
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(N_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon_t$", 
+  Model="2. $ln(N_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=2), 
@@ -93,7 +98,7 @@ seltable=rbind(seltable,tmp1)
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(N_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(N_{t-2}))$ + $\\epsilon_t$", 
+  Model="3a. $ln(N_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(N_{t-2}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=2), 
@@ -105,7 +110,7 @@ seltable=rbind(seltable,tmp1)
 i=4; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(N_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(S_{t-2}))$ + $\\epsilon_t$", 
+  Model="3b. $ln(N_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(S_{t-2}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=2), 
@@ -119,7 +124,7 @@ seltable=rbind(seltable,tmp1)
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests for the $N_t$ model using AIC for models fit to log landings data.  $S_t$ is the catch during the spawning season (Jul-Sep). $N_t$ is the catch during the non-spawning period (Oct-Jun) of season $t$; note the fishing season is defined as Jul-Jun not calendar year. $S_{t-1}$ and $N_{t-1}$ are the catch during the prior sardine season during and after the spawning period respectively. $S_{t-2}$ and $N_{t-2}$ are the same for two seasons prior.")
+thecap=paste("Model selection tests for the $N_t$ model using AIC for models fit to log landings data.  $S_t$ is the catch during the spawning season (Jul-Sep). $N_t$ is the catch during the post-monsoon period (Oct-Mar) of season $t$; note the fishing season is defined as Jul-Jun not calendar year. $S_{t-1}$ and $N_{t-1}$ are the catch during the prior sardine season during and after the spawning period respectively. $S_{t-2}$ and $N_{t-2}$ are the same for two seasons prior. ")
 fullcap=paste("Table ", ref("tab:nonspawner-models"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, escape=FALSE)
 ```
