--- a/Table App B spawner covariates.Rmd
+++ b/Table App B spawner covariates.Rmd
@@ -151,6 +151,7 @@ cat("\\clearpage")
 
 
 ```{r table-appB-spawner-sst, echo=FALSE}
+########### SST TEST 
 #set up table
 seltable = data.frame(
   Model=paste("base model (M) ", Yr1,"-", Yr2, " data", sep=""), 
@@ -167,10 +168,7 @@ dat$cov0=dat[[paste(covname, "0", sep="")]]
 dat$cov1=dat[[paste(covname, "1", sep="")]]
 m1 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m2 = gam(spawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
-m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m4 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
-m5 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
-a=anova(m1,m2,m3,m4,m5, test="F")
+a=anova(m1,m2, test="F")
 
 # header M1 for all models
 
@@ -190,7 +188,7 @@ seltable=rbind(seltable,tmp1)
 tmp1 = data.frame(Model="\\kern 1em", Residual.df="\\kern 1em", MASE="\\kern 1em", Adj.R2="\\kern 1em", F="\\kern 1em", p.value="\\kern 1em", AIC="")
 seltable=rbind(seltable,tmp1)
 
-for(covname in c("SST.2.10.mon6to9.")){
+for(covname in c("SST.2.10.mon3to5.")){
 #set up table
   if(covname=="SST.4.mon10to12.") covtit = "$V_t$ = Oct-Dec SST"
   if(covname=="SST.4.mon7to12.") covtit =  "$V_t$ = Jul-Dec SST"
@@ -203,7 +201,7 @@ for(covname in c("SST.2.10.mon6to9.")){
   if(covname=="SST.2.10.mon6to9.") covtit =  "$V_t$ = Ave Jun-Sep SST (S1)"
   if(covname=="SST.2.10.mon9to10.") covtit =  "$V_t$ = Sep-Oct SST (L1)"
   if(covname=="SST.2.10.mon1to12.") covtit =  "$V_t$ = Ave Jan-Dec SST"
-  if(covname=="SST.2.10.mon1to5.") covtit =  "$V_t$ = Ave Jan-May SST"
+  if(covname=="SST.2.10.mon3to5.") covtit =  "$V_t$ = Ave Mar-May SST (S4)"
   if(covname=="SST.2.10.mon7to12.") covtit =  "$V_t$ = Ave Jul-Dec SST"
 
 #var header
@@ -215,15 +213,14 @@ dat$cov1=dat[[paste(covname, "1", sep="")]]
 m1 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m2 = gam(spawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
 m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m4 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
-m5 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
-a=anova(m1,m2,m3,m4,m5, test="F")
+m4 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
+a=anova(m1,m2,m3,m4, test="F")
 
 #model 2
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="2. $ln(S_t)$ = M + $\\beta V_t$",
+  Model="2a. $ln(S_t)$ = M + $\\beta V_t$",
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -235,7 +232,7 @@ seltable=rbind(seltable,tmp1)
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="3. $ln(S_t)$ = M + $s(V_t)$",
+  Model="3a. $ln(S_t)$ = M + $s(V_t)$",
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -243,11 +240,29 @@ tmp1=data.frame(
   AIC = round(AIC(get(mod)), digits=2))
 seltable=rbind(seltable,tmp1)
 
-#model 4
+#model 6
 i=4; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="4. $ln(S_t)$ = M + $s(V_t)$ + $\\beta V_{t-1}$", 
+  Model="4a. $ln(S_t)$ = M + $s(V_t)$ + $s(V_{t-1})$", 
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
+  AIC = round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+m1 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=dat)
+m2 = gam(spawners0 ~ s(nspawners1, sp=0.6) + cov1, data=dat)
+m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov1, sp=0.6), data=dat)
+m4 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
+a=anova(m1,m2,m3,m4, test="F")
+
+#model 4
+i=2; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="2b. $ln(S_t)$ = M + $\\beta V_{t-1}$",
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -256,10 +271,10 @@ tmp1=data.frame(
 seltable=rbind(seltable,tmp1)
 
 #model 5
-i=5; mod=paste("m",i,sep="")
+i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="5. $ln(S_t)$ = M + $s(V_t)$ + $s(V_{t-1})$", 
+  Model="3b. $ln(S_t)$ = M + $s(V_{t-1})$",
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -267,11 +282,12 @@ tmp1=data.frame(
   AIC = round(AIC(get(mod)), digits=2))
 seltable=rbind(seltable,tmp1)
 
+
 ## Add space
 tmp1 = data.frame(Model="\\kern 1em", Residual.df="\\kern 1em", MASE="\\kern 1em", Adj.R2="\\kern 1em", F="\\kern 1em", p.value="\\kern 1em", AIC="")
 seltable=rbind(seltable,tmp1)
 }
-for(covname in c("SST.2.10.mon9to10.", "SST.2.10.mon10to12.")){
+for(covname in c("SST.2.10.mon10to12.")){
 #set up table
   if(covname=="SST.4.mon10to12.") covtit = "$V_t$ = Oct-Dec SST"
   if(covname=="SST.4.mon7to12.") covtit =  "$V_t$ = Jul-Dec SST"
@@ -285,6 +301,7 @@ for(covname in c("SST.2.10.mon9to10.", "SST.2.10.mon10to12.")){
   if(covname=="SST.2.10.mon9to10.") covtit =  "$V_t$ = Ave Sep-Oct SST (L1)"
   if(covname=="SST.2.10.mon1to12.") covtit =  "$V_t$ = Ave Jan-Dec SST"
   if(covname=="SST.2.10.mon10to12.") covtit =  "$V_t$ = Ave Oct-Dec SST (L1)"
+  if(covname=="SST.2.10.mon3to5.") covtit =  "$V_t$ = Ave Mar-May SST (S4)"
 
 #var header
 seltable = rbind(seltable, data.frame(Model=covtit, Residual.df="", MASE="", Adj.R2="", F="", p.value="", AIC="", stringsAsFactors=FALSE))
@@ -326,14 +343,14 @@ tmp1 = data.frame(Model="\\kern 1em", Residual.df="\\kern 1em", MASE="\\kern 1em
 seltable=rbind(seltable,tmp1)
 }
 # Remove space at top and bottom
-seltable=seltable[2:(dim(seltable)[1]-1),]
+seltable=seltable[1:(dim(seltable)[1]-1),]
 ```
 
 ```{r print-tableAppB-sst, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste0("Model selection tests of average sea surface temperature off the Kerala coast (up to 160km offshore) in different months off Cochi as the explanatory variable ($V_t$) for the catch during spawning months (Jul-Sep) using ", Yr1," to ", Yr2, " data.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. See Table", ref("tabappB:spawner-model-precip", pre="B"), "for an explanation of the models.")
+thecap=paste0("Model selection tests of average sea surface temperature off the Kerala coast (up to 80km offshore in boxes 2-5 in Figure 1) as the explanatory variable ($V_t$) for the catch during spawning months (Jul-Sep) using ", Yr1," to ", Yr2, " data.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. See Table ", ref("tabappB:spawner-model-precip", pre="B"), " for an explanation of the models.")
 fullcap=paste("Table ", ref("tabappB:spawner-model-sst", pre="B"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
@@ -344,6 +361,7 @@ cat("\\clearpage")
 
 
 ```{r table-appB-spawner-upw, echo=FALSE}
+## UPWELLING TEST
 #set up table
 seltable = data.frame(
   Model=paste("base model (M) ", Yr1,"-", Yr2, " data", sep=""), 
@@ -360,10 +378,7 @@ dat$cov0=dat[[paste(covname, "0", sep="")]]
 dat$cov1=dat[[paste(covname, "1", sep="")]]
 m1 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m2 = gam(spawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
-m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m4 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
-m5 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
-a=anova(m1,m2,m3,m4,m5, test="F")
+a=anova(m1,m2, test="F")
 
 # header M1 for all models
 
@@ -383,10 +398,10 @@ seltable=rbind(seltable,tmp1)
 tmp1 = data.frame(Model="\\kern 1em", Residual.df="\\kern 1em", MASE="\\kern 1em", Adj.R2="\\kern 1em", F="\\kern 1em", p.value="\\kern 1em", AIC="")
 seltable=rbind(seltable,tmp1)
 
-for(covname in c("SST.UPW.4.mon6to9.", "max.SST.UPW.4.mon6to9.")){
+for(covname in c("SST.UPW.4.mon6to9.", "SST.2.10.mon6to9.")){
 #set up table
-  if(covname=="SST.UPW.4.mon6to9.") covtit = "$V_t$ = Average Jun-Sep Upwelling (S4 and L2)"
-  if(covname=="max.SST.UPW.4.mon6to9.") covtit = "$V_t$ = Max Jun-Sep Upwelling (S4 and L2)"
+  if(covname=="SST.UPW.4.mon6to9.") covtit = "$V_t$ = Ave. Jun-Sep UPW (S4 and L2)"
+  if(covname=="SST.2.10.mon6to9.") covtit = "$V_t$ = Ave. Jun-Sep SST (S4 and L2)"
  
 #var header
 seltable = rbind(seltable, data.frame(Model=covtit, Residual.df="", MASE="", Adj.R2="", F="", p.value="", AIC="", stringsAsFactors=FALSE))
@@ -397,15 +412,14 @@ dat$cov1=dat[[paste(covname, "1", sep="")]]
 m1 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m2 = gam(spawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
 m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m4 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
-m5 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
-a=anova(m1,m2,m3,m4,m5, test="F")
+m4 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
+a=anova(m1,m2,m3,m4, test="F")
 
 #model 2
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="2. $ln(S_t)$ = M + $\\beta V_t$",
+  Model="2a. $ln(S_t)$ = M + $\\beta V_t$",
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -417,7 +431,7 @@ seltable=rbind(seltable,tmp1)
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="3. $ln(S_t)$ = M + $s(V_t)$",
+  Model="3a. $ln(S_t)$ = M + $s(V_t)$",
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -425,11 +439,29 @@ tmp1=data.frame(
   AIC = round(AIC(get(mod)), digits=2))
 seltable=rbind(seltable,tmp1)
 
-#model 4
+#model 6
 i=4; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="4. $ln(S_t)$ = M + $s(V_t)$ + $\\beta V_{t-1}$", 
+  Model="4a. $ln(S_t)$ = M + $s(V_t)$ + $s(V_{t-1})$", 
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
+  AIC = round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+m1 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=dat)
+m2 = gam(spawners0 ~ s(nspawners1, sp=0.6) + cov1, data=dat)
+m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov1, sp=0.6), data=dat)
+m4 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
+a=anova(m1,m2,m3,m4, test="F")
+
+#model 4
+i=2; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="2b. $ln(S_t)$ = M + $\\beta V_{t-1}$",
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -438,10 +470,10 @@ tmp1=data.frame(
 seltable=rbind(seltable,tmp1)
 
 #model 5
-i=5; mod=paste("m",i,sep="")
+i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="5. $ln(S_t)$ = M + $s(V_t)$ + $s(V_{t-1})$", 
+  Model="3b. $ln(S_t)$ = M + $s(V_{t-1})$",
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -449,82 +481,20 @@ tmp1=data.frame(
   AIC = round(AIC(get(mod)), digits=2))
 seltable=rbind(seltable,tmp1)
 
-# # Smitha says it doesn't make sense to have 'upwelling' when no upwelling
-# ## Add space
-# tmp1 = data.frame(Model="\\kern 1em", Residual.df="\\kern 1em", MASE="\\kern 1em", Adj.R2="\\kern 1em", F="\\kern 1em", p.value="\\kern 1em", AIC="")
-# seltable=rbind(seltable,tmp1)
-# }
-# # Use only prior season data because in current season these are AFTER spawning
-# for(covname in c("SST.UPW.4.mon10to12.", "SST.UPW.4.mon1to3.")){
-# #set up table
-#   if(covname=="SST.UPW.4.mon10to12.") covtit = "$V_t$ = Oct-Dec Upwelling prior season"
-#   if(covname=="SST.UPW.4.mon4to6.") covtit = "$V_t$ = Apr-Jun Upwelling prior season"
-#   if(covname=="SST.UPW.4.mon1to3.") covtit = "$V_t$ = Jan-Mar Upwelling prior season"
-# 
-# #var header
-# seltable = rbind(seltable, data.frame(Model=covtit, Residual.df="", MASE="", Adj.R2="", F="", p.value="", AIC="", stringsAsFactors=FALSE))
-# 
-# dat$cov0=dat[[paste(covname, "0", sep="")]]
-# dat$cov1=dat[[paste(covname, "1", sep="")]]
-# #dat$cov2=dat[[paste(covname, "2", sep="")]]
-# m1 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=dat)
-# m2 = gam(spawners0 ~ s(nspawners1, sp=0.6) + cov1, data=dat)
-# m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov1, sp=0.6), data=dat)
-# a=anova(m1,m2,m3, test="F")
-# 
-# #model 2
-# i=2; mod=paste("m",i,sep="")
-# aa = summary(get(mod))
-# tmp1=data.frame(
-#   Model="2. $ln(S_t)$ = M + $\\beta V_{t-1}$",
-#   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
-#   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
-#   Adj.R2=100*round(aa$r.sq, digits=3), 
-#   F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
-#   AIC = round(AIC(get(mod)), digits=2))
-# seltable=rbind(seltable,tmp1)
-# 
-# #model 3
-# i=3; mod=paste("m",i,sep="")
-# aa = summary(get(mod))
-# tmp1=data.frame(
-#   Model="3. $ln(S_t)$ = M + $s(V_{t-1})$",
-#   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
-#   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
-#   Adj.R2=100*round(aa$r.sq, digits=3), 
-#   F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
-#   AIC = round(AIC(get(mod)), digits=2))
-# seltable=rbind(seltable,tmp1)
-
-# #model 4
-# i=4; mod=paste("m",i,sep="")
-# aa = summary(get(mod))
-# tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $s(V_t)$ + $\\beta V_{t-1}$ + $\\epsilon$", 
-#                 Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), AIC = round(AIC(get(mod)), digits=2))
-# tmp2=data.frame(Model=paste("\\kern 3em ($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "\\%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value = "", AIC= "")
-# seltable=rbind(seltable,tmp1,tmp2)
-# 
-# #model 5
-# i=5; mod=paste("m",i,sep="")
-# aa = summary(get(mod))
-# tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $s(V_t)$ + $s(V_{t-1})$ + $\\epsilon$", 
-#                 Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), AIC = round(AIC(get(mod)), digits=2))
-# tmp2=data.frame(Model=paste("\\kern 3em ($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "\\%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value = "", AIC= "")
-# seltable=rbind(seltable,tmp1,tmp2)
 
 ## Add space
 tmp1 = data.frame(Model="\\kern 1em", Residual.df="\\kern 1em", MASE="\\kern 1em", Adj.R2="\\kern 1em", F="\\kern 1em", p.value="\\kern 1em", AIC="")
 seltable=rbind(seltable,tmp1)
 }
 
-seltable=seltable[2:(dim(seltable)[1]-1),]
+seltable=seltable[1:(dim(seltable)[1]-1),]
 ```
 
 ```{r print-tableAppB-upw, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests of upwelling intensity off Cochi as the explanatory variable.  See Table", ref("tabappB:spawner-model-precip", pre="B"), "for an explanation of the models.")
+thecap=paste("Model selection tests of upwelling intensity off Cochi as the explanatory variable.  See Table", ref("tabappB:spawner-model-precip", pre="B"), "for an explanation of the models. Two upwelling indices were tested. The nearshore-offshore temperature diferential (UPW), which is the offshore (box 13) minus nearshore (box 4) SST, and the average nearshore SST along the Kerala coast (boxes 2-5). These are highly correlated but not identical.")
 fullcap=paste("Table ", ref("tabappB:spawner-model-upw", pre="B"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
